--- a/Assignments/A02_CodingBasics.Rmd
+++ b/Assignments/A02_CodingBasics.Rmd
@@ -1,10 +1,10 @@
 ---
 title: "Assignment 2: Coding Basics"
-author: "Student Name"
+author: "Meghan Seyler"
 output: pdf_document
 geometry: margin=2.54cm
 editor_options: 
-  chunk_output_type: console
+chunk_output_type: console
 ---
 
 ## OVERVIEW
@@ -32,10 +32,21 @@ This exercise accompanies the lessons in Environmental Data Analytics on coding 
 
 ```{r}
 #1. 
+increasingbyfours<-seq(1,100,4) #here I created a sequence that increases by fours and assigned it the name increasingbyfours
+increasingbyfours 
 
 #2. 
+mean_increasingbyfours<-mean(increasingbyfours) #taking the mean of increasingbyfours and assigning the value a name
+mean_increasingbyfours
+median_increasingbyfours<-median(increasingbyfours) #taking the median of increasingbyfours and assigning the value a name
+median_increasingbyfours
 
 #3. 
+#testing statements that will generate a true or false output. The mean is NOT greater than the median
+mean_increasingbyfours>median_increasingbyfours  
+mean_increasingbyfours<median_increasingbyfours
+mean_increasingbyfours==median_increasingbyfours
+
 
 ```
 
@@ -50,19 +61,42 @@ This exercise accompanies the lessons in Environmental Data Analytics on coding 
 8. Label the columns of your data frame with informative titles.
 
 ```{r}
+#5. 
+studentnames<-c ("Aislinn", "Tay", "Eva", "John") #character
 
+testscores<-c (96,60,45,5) #double
+
+pass<-c (TRUE,FALSE,FALSE,FALSE) #logical
+
+#6. 
+typeof(studentnames)
+typeof(testscores)
+typeof(pass)
+
+#7 
+studentscores<- data.frame(studentnames,testscores,pass)
+studentscores
+
+#8
+colnames(studentscores)<- c("First_Name", "Total_Score", "PASS(T/F)")
+studentscores
 ```
 
 9. QUESTION: How is this data frame different from a matrix?
 
-> Answer: 
+> Answer: In a matrix all columns must have the same mode and length. A data frame can consist of many modes. This is demonstrated by the data frame above which consists of logical, character, and numerical modes.
 
 10. Create a function with an if/else statement. Your function should determine whether a test score is a passing grade of 50 or above (TRUE or FALSE). You will need to choose either the `if` and `else` statements or the `ifelse` statement. Hint: Use `print`, not `return`. The name of your function should be informative.
 
 11. Apply your function to the vector with test scores that you created in number 5. 
 
 ```{r}
-
+determinepass<- function (x) {
+  if(x>=50) 
+    x==TRUE
+  else {x==FALSE}
+}
+determinepass(49)
 ```
 
 12. QUESTION: Which option of `if` and `else` vs. `ifelse` worked? Why?
