--- a/Assignments/MeghanSeylerA03_DataExploration.Rmd
+++ b/Assignments/MeghanSeylerA03_DataExploration.Rmd
@@ -1,7 +1,9 @@
 ---
-title: "Assignment 3: Data Exploration"
-author: "Meghan Seyler, Section #0"
-output: pdf_document
+title: 'Assignment 3: Data Exploration'
+author: 'Meghan Seyler, Section #2'
+output:
+  pdf_document: default
+  word_document: default
 geometry: margin=2.54cm
 ---
 
@@ -26,27 +28,29 @@ The completed exercise is due on <>.
 getwd()
 library(tidyverse)
 
-Neonics<-read.csv("../Data/Raw/ECOTOX_Neonicotinoids_Insects_raw.csv")
+Neonics<-read.csv("../Data/Raw/ECOTOX_Neonicotinoids_Insects_raw.csv",
+                  stringsAsFactors = TRUE)
 
-Litter<-read.csv("../Data/Raw/NEON_NIWO_Litter_massdata_2018-08_raw.csv")
+Litter<-read.csv("../Data/Raw/NEON_NIWO_Litter_massdata_2018-08_raw.csv",
+                 stringsAsFactors = TRUE)
 ```
 
 ## Learn about your system
 
 2. The neonicotinoid dataset was collected from the Environmental Protection Agency's ECOTOX Knowledgebase, a database for ecotoxicology research. Neonicotinoids are a class of insecticides used widely in agriculture. The dataset that has been pulled includes all studies published on insects. Why might we be interested in the ecotoxicologoy of neonicotinoids on insects? Feel free to do a brief internet search if you feel you need more background information. 
 
-> Answer: 
+> Answer: The ecotoxicology of neonicotinoids is relevant because it is important to understand how a widely used inescticied affects different species of insects and animals. From a brief look at the data, I see that this data set also recorded dosage. So one thing we may be interested in looking into is the minimum dosage required to have the intended affect on a particular insect. This way we can minimize the use of insecticides and avoid any potential consequences of using a higher than needed dose. 
 
 3. The Niwot Ridge litter and woody debris dataset was collected from the National Ecological Observatory Network, which collectively includes 81 aquatic and terrestrial sites across 20 ecoclimatic domains. 32 of these sites sample forest litter and woody debris, and we will focus on the Niwot Ridge long-term ecological research (LTER) station in Colorado. Why might we be interested in studying litter and woody debris that falls to the ground in forests? Feel free to do a brief internet search if you feel you need more background information. 
 
-> Answer: 
+> Answer: Litter and woody debris measurements can tell us about Aboveground Net Primary Productivtiy.This information looks like it was collected at many different sites and around the same date.
 
 4. How is litter and woody debris sampled as part of the NEON network? Read the NEON_Litterfall_UserGuide.pdf document to learn more. List three pieces of salient information about the sampling methods here: 
 
 > Answer: 
-*
-*
-*
+*Litter is defined as material that is dropped from the forest canopy and has a butt end diameter of <2cm and a length <50cm
+*Litter is collected from elevated traps and fine woody debris is collected from groud traps.
+*All reports are of a single trap at a single point in time.
 
 
 
@@ -54,89 +58,122 @@ Litter<-read.csv("../Data/Raw/NEON_NIWO_Litter_massdata_2018-08_raw.csv")
 
 5. What are the dimensions of the dataset?
 
-```{r}
+```{r, warning=FALSE}
+dim(Litter) # 188 rows and 19 columns
 
+dim(Neonics) #4623 rows and 30 columns
 ```
 
 6. Using the `summary` function on the "Effect" column, determine the most common effects that are studied. Why might these effects specifically be of interest?
-```{r}
-
+```{r, warning=FALSE}
+summary(Neonics$Effect)
 ```
 
-> Answer: 
+> Answer: It is useful to get this quick view of frequency of effects of the insecticide because it allows the analyzer to start forming more questions. For example I see that population effects and mortality effects are by far the most frequent, based on this information I may want to investigate the doeses used that caused these effects. Additionally, it is interesting that only one species expeprienced hormonal effects. Overall it is a good place to start understanding the story of the data. 
 
 7. Using the `summary` function, determine the six most commonly studied species in the dataset (common name). What do these species have in common, and why might they be of interest over other insects? Feel free to do a brief internet search for more information if needed.
 
-```{r}
-
+```{r, warning=FALSE}
+summary(Neonics$Species.Common.Name, 6)
 ```
 
-> Answer: 
+> Answer: They're all in the bee category indicating they are probably gentically similar. This indicates that the insecticide is clearly effecting a specific species more than others. Additionally, it is good to know that the "other" category occupies such a high number of samples.
 
 8. Concentrations are always a numeric value. What is the class of Conc.1..Author. in the dataset, and why is it not numeric?
 
-```{r}
-
+```{r, warning=FALSE}
+typeof(Neonics$Conc.1..Author.)
+class(Neonics$Conc.1..Author.)
 ```
 
-> Answer:
+> Answer: Conc.1..Author is classified as a factor. It is not numveric because there is a categorical element to this column.
 
 
 
 ## Explore your data graphically (Neonics)
 
 9. Using `geom_freqpoly`, generate a plot of the number of studies conducted by publication year. 
-```{r}
-
+```{r, warning=FALSE}
+ggplot(Neonics, aes(x = Publication.Year)) +
+  geom_freqpoly()
 ```
 
 10. Reproduce the same graph but now add a color aesthetic so that different Test.Location are displayed as different colors.
-```{r}
-
+```{r, warning=FALSE}
+ggplot(Neonics) +
+  geom_freqpoly(aes(x = Publication.Year, color = Test.Location))
+  
 ```
 
 Interpret this graph. What are the most common test locations, and do they differ over time?
 
-> Answer: 
+> Answer: The most common test locations are Lab and Field natural. While these are consistently the two most common test locations, they do change a bit overtime. For example Field natural was the most common from about 1992-2000 but from 2000-2020 Lab was consistently most common except for in 2009.
 
 11. Create a bar graph of Endpoint counts. What are the two most common end points, and how are they defined? Consult the ECOTOX_CodeAppendix for more information. 
 
-```{r}
-
+```{r, warning=FALSE}
+ggplot(Neonics)+
+  geom_bar(aes(x=Endpoint))
 ```
 
-> Answer: 
+> Answer: The two most common end points are LOEL and NOEL.
+  -NOEL: No-observable-effect-level: highest dose (concentration) 
+producing effects not significantly different from responses of 
+controls according to author's reported statistical test 
+(NOEAL/NOEC)
+  -LOEL:Lowest-observable-effect-level: lowest dose (concentration) 
+producing effects that were significantly different (as reported 
+by authors) from responses of controls (LOEAL/LOEC)
+
 >
+
 
 ## Explore your data (Litter)
 
 12. Determine the class of collectDate. Is it a date? If not, change to a date and confirm the new class of the variable. Using the `unique` function, determine which dates litter was sampled in August 2018. 
-```{r}
+```{r, warning=FALSE}
+class(Litter$collectDate) #collectDate class = factor
+
+Litter$collectDate <- as.Date(Litter$collectDate, format = "%Y-%m-%d") 
+
+class(Litter$collectDate) #checking that class changed to Date
+
+
+unique(Litter$collectDate) #liter was sampled on August 2nd and 8th 2018
 
 ```
 
 13. Using the `unique` function, determine how many plots were sampled at Niwot Ridge. How is the information obtained from `unique` different from that obtained from `summary`?
 
-```{r}
+```{r, warning=FALSE}
+unique(Litter$plotID) #12 unique plots were sampled at Niwot Ridge
 
+summary(Litter$plotID)
 ```
 
-> Answer: 
+> Answer: The unique function resulted in an output that told us the number of unique plots sampled. The summary funciton is different than unique because it showed each of the unique plots as well as the number of plots within each unique category. Also, the summary output does not ouput a number communicating how many total unique plots there are so if this were a larger data set it would be best to use both of these commands together to best understand the data. 
 
 14. Create a bar graph of functionalGroup counts. This shows you what type of litter is collected at the Niwot Ridge sites. Notice that litter types are fairly equally distributed across the Niwot Ridge sites.
-```{r}
-
+```{r, warning=FALSE}
+ggplot(Litter)+
+  geom_bar(aes(x=functionalGroup))
 ```
 
 15. Using `geom_boxplot` and `geom_violin`, create a boxplot and a violin plot of dryMass by functionalGroup. 
-```{r}
-
+```{r, warning=FALSE}
+ggplot(Litter) +
+  geom_boxplot(aes(x =functionalGroup, y = dryMass))
+```
+```{r, warning=FALSE}
+ggplot(Litter) +
+  geom_violin(aes(x = functionalGroup, y =dryMass ))
+    
 ```
 
 Why is the boxplot a more effective visualization option than the violin plot in this case?
 
-> Answer: 
+> Answer: The boxplot is more effective because there are not a large amount of multiple measurements at the same dryMass. Because a violin plot is designed to show the range of values and the distribution within that range, the width of the violin is very tiny in this case and results in a poor illistration of the data.
 
 What type(s) of litter tend to have the highest biomass at these sites? 
 
-> Answer: 
+> Answer: The boxplot shows that needles and mixed litter tend to have the highest biomass at these sights. 
