--- a/Lessons/05_Part1_DataVisualization.Rmd
+++ b/Lessons/05_Part1_DataVisualization.Rmd
@@ -72,7 +72,7 @@ Here are some commonly used aesthetic types that can be manipulated in ggplot:
 * fill
 * shape
 * size
-* transparency
+* transparency #alpha
 
 ### Plotting continuous variables over time: Scatterplot and Line Plot
 
