--- a/Assignments/Seyler_A08_SpatialAnalysis.Rmd
+++ b/Assignments/Seyler_A08_SpatialAnalysis.Rmd
@@ -1,11 +1,13 @@
 ---
-title: "Assignment 9: Spatial Analysis in R"
-author: "Student Name"
-output: pdf_document
+title: 'Assignment 9: Spatial Analysis in R'
+author: "Meghan Seyler"
+output:
+  html_document:
+    df_print: paged
 geometry: margin=2.54cm
-editor_options: 
+editor_options:
   chunk_output_type: console
-  markdown: 
+  markdown:
     wrap: 72
 ---
 
@@ -30,10 +32,14 @@ This exercise accompanies the lessons in Environmental Data Analytics (ENV872L) 
 
 ```{r Prepare workspace}
 #1.
-
+getwd()
 
 #2. 
-
+library(tidyverse)
+library(sf)
+library(leaflet)
+library(mapview)
+library(RColorBrewer)
 
 ```
 
@@ -47,20 +53,20 @@ In this exercise, we will be exploring stream gage height data in Nebraska corre
 
 ```{r Read the county data into an sf dataframe}
 #3. Read in Counties shapefile into an sf dataframe, filtering for just NE counties
-
+counties_Nebraska_sf<- st_read('../Data/Spatial/cb_2018_us_county_20m.shp') %>% 
+  filter(STATEFP == 31) #Filter for just Nebraska Counties
 
 #4. Reveal the CRS of the counties features
-
+st_crs(counties_Nebraska_sf)$epsg
 
 #5. Plot the data
-
+mapview(counties_Nebraska_sf)
 ```
 
 6. What is the EPSG code of the Counties dataset? Is this a geographic or a projected coordinate reference system? (Or, does this CRS use angular or planar coordinate units?) To what datum is this CRS associated? (Tip: look the EPSG code on <https://spatialreference.org>) 
 
 > ANSWER: 
-> 
-
+> The EPSG code is 4269. It is a geographic crs. The CRS is associated with the North American Datum 1983.
 
 ### Read in gage locations csv as a dataframe, then display the column names it contains
 
@@ -72,17 +78,17 @@ Next we'll read in some USGS/NWIS gage location data added to the `Data/Raw` fol
 
 ```{r Read in USGS Gage Locations}
 #7. Read in gage locations csv as a dataframe
-
+NWIS_SiteInfo_NE_df <- read_csv('../Data/Raw/NWIS_SiteInfo_NE_RAW.csv')
 
 #8. Reveal the names of the columns
-
+colnames(NWIS_SiteInfo_NE_df)
 
 ```
 
 9. What columns in the dataset contain the x and y coordinate values, respectively?  
-> ANSWER:
-> 
-
+> ANSWER:The columns in the dataset that contain the x and y coordinate 
+>values are dec_long_va and dec_lat_va respectively
+ 
 
 ### Convert the dataframe to a spatial features ("sf") dataframe
 
@@ -93,17 +99,18 @@ Next we'll read in some USGS/NWIS gage location data added to the `Data/Raw` fol
 
 ```{r Convert dataframe to sf dataframe}
 #10. Convert to an sf object
-
+NWIS_SiteInfo_NE_sf <- read_csv('../Data/Raw/NWIS_SiteInfo_NE_RAW.csv') %>% 
+  st_as_sf(coords = c('dec_long_va','dec_lat_va'), crs=4269)
 
 #11. Re-examine the column names
-
+colnames(NWIS_SiteInfo_NE_sf)
 
 ```
 
 12. What new field(s) appear in the sf dataframe created? What field(s), if any, disappeared?
 
->ANSWER: 
->
+>ANSWER: There is a new column titled geometry and the dec_lat_va and 
+>dec_long_va fields disappeared
 
 
 ### Plot the gage locations on top of the counties
@@ -115,7 +122,11 @@ Next we'll read in some USGS/NWIS gage location data added to the `Data/Raw` fol
 
 ```{r Plot the spatial features}
 #13. Plot the gage locations atop the county features
-
+ggplot()+
+  geom_sf(data=counties_Nebraska_sf, fill="pink")+
+  geom_sf(data=NWIS_SiteInfo_NE_sf, fill="blue")+
+  ggtitle('Nebraska: USGS/NWIS gage location', subtitle = 'Meghan Seyler')+
+  theme(plot.title = element_text(hjust = 0.5))
 
 ```
 
@@ -134,19 +145,25 @@ Lastly, we want to attach some gage height data to our site locations. I've cons
 
 ```{r}
 #14. Read the site flow data into a data frame
-
+NWIS_SiteFlowData_NE_RAW_df<-read_csv('../Data/Raw/NWIS_SiteFlowData_NE_RAW.csv')
 
 #15. Show the column names
-
+colnames(NWIS_SiteFlowData_NE_RAW_df)
 
 #16. Join location data to it
+SiteFlow_sf_gage_df_join <-  merge(x =NWIS_SiteInfo_NE_sf,
+                           y = NWIS_SiteFlowData_NE_RAW_df, 
+                           by.x = "site_no",
+                           by.y = "station_nm")
 
+SiteFlow_sf_gage_df_join <- NWIS_SiteInfo_NE_sf %>% 
+  left_join(NWIS_SiteFlowData_NE_RAW_df, by = c("site_no" = "site_no") )
 
 #17. Show the column names of the joined dataset
-
+colnames(SiteFlow_sf_gage_df_join)
 
 #18. Show the dimensions of this joined dataset
-
+str(SiteFlow_sf_gage_df_join)
 
 ```
 
@@ -158,9 +175,9 @@ Now we can examine where the flooding appears most acute by visualizing gage hei
 
 ```{r}
 #Map the points, sized by gage height
-
-
-#ggplot
+mapview(counties_Nebraska_sf, 
+        col.regions = brewer.pal(2,'RdBu')) + 
+  mapview(SiteFlow_sf_gage_df_join, cex = 'gage_ht')
 
 
 ```
@@ -179,9 +196,15 @@ Up next we will do some spatial analysis with our data. To prepare for this, we 
 
 ```{r}
 #20 Transform the counties and gage location datasets to UTM Zone 14
+counties_Nebraska_utm <- st_transform(counties_Nebraska_sf, crs = 32614)
+SiteFlow_gage_join_utm <- st_transform(SiteFlow_sf_gage_df_join, crs = 32614)
 
 
 #21 Plot the data
+mapview(counties_Nebraska_utm, 
+        zcol = 'COUNTYNS') + 
+  mapview(SiteFlow_gage_join_utm, zcol = 'gage_ht')
+
 
 
 ```
@@ -200,13 +223,20 @@ Now let's zoom into a particular county and examine the gages located there.
 
 ```{r}
 #22 Select the county
-
+Lancaster_co<- counties_Nebraska_utm %>%
+  filter(NAME %in% c ('Lancaster'))
 
 #23 Select gages within the selected county
+Lancaster_gages <-SiteFlow_gage_join_utm %>%
+  filter(st_intersects(x = ., y = Lancaster_co, sparse = F))
 
+Lancaster_gages <- counties_Nebraska_utm[Lancaster_co,]
 
 #24 Plot
 
-
+ggplot()+ 
+  geom_sf(data = counties_Nebraska_utm, color = 'green', fill = NA)+
+  geom_sf(data =  Lancaster_co, fill = 'pink')+
+  geom_sf(data = Lancaster_gages, color = 'blue', fill = NA)
 
 ```
